# neurofly-dataset-generation

./: .gitignore  README.md  figure_eight_flight_data.csv  inject_trajectory_noise.py  main.py  plot_noisy_position.py  pyproject.toml  requirements.txt  spiral_traj.py  visualise_traj.py
neurofly_dataset_generation/: __init__.py  cli.py  config.py  io_utils.py  noise.py  plotting.py  simulation.py  trajectories.py
